--- a/discussions/lra/lra-plans-and-ideas.adoc
+++ b/discussions/lra/lra-plans-and-ideas.adoc
@@ -10,6 +10,11 @@ Feel free to add your points, create PR and discuss.
 == HA LRA
 
 Longer standing goal to make LRA more cloud native. First there is need to clarify what should be the design approach.
+Some ideas have already been captured in JIRA:
+
+https://issues.redhat.com/browse/JBTM-2959 Allow different LRA coordinators to share an object store
+https://issues.redhat.com/browse/JBTM-2997 Ensure that any LRA coordinator instance can control any LRA
+
 
 == Messaging protocols
 
